# super-nerual-net

./: pyproject.toml
neural_network/: __init__.py  activations.py  base.py  ffnn.py  initializers.py  optimizer.py  utils.py
