[project]
name = "neural-network"
version = "0.1.0"
description = "Neural network implementation that supports classification and regression tasks."
authors = [
    {name = "javid rezai",email = "javid.af@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
