[project]
name = "neural-network"
version = "0.1.0"
description = "Neural network implementation that supports classification and regression tasks."
authors = [
    {name = "javid rezai",email = "javid.af@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==1.26.4"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"